syntax = "proto3";

package host;

option go_package = "github.com/cline/grpc-go/host";
option java_multiple_files = true;
option java_package = "bot.cline.host.proto";

// This is for use in integration tests to get the contents of the webview.
service TestingService {
  rpc getWebviewHtml(GetWebviewHtmlRequest) returns (GetWebviewHtmlResponse);
}

message GetWebviewHtmlRequest {}

message GetWebviewHtmlResponse {
  optional string html = 1;
}
